# devbrief

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: token-safety.md  usage.md
src/devbrief/: cli.py  compactor.py  config.py  parser.py  reporter.py  storage.py  summarizer.py  tui.py
