[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devbrief"
version = "0.1.0"
description = "AI-powered dev session log — captures Claude Code sessions and generates boss-friendly reports"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["claude", "ai", "development", "productivity", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.70.0",  # 8.x supported
    "tomli-w>=1.0",
]

[project.scripts]
devbrief = "devbrief.cli:main"

[project.urls]
Homepage = "https://github.com/yuanh/devbrief"
Issues = "https://github.com/yuanh/devbrief/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/devbrief"]
